--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -9,6 +9,7 @@
         android:theme="@style/AppTheme" >
         <activity
             android:name=".ui.TaskListActivity"
+            android:screenOrientation="portrait"
             android:label="@string/app_name" >
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
@@ -16,6 +17,12 @@
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
+
+        <activity android:name=".ui.AddTaskActivity"
+            android:screenOrientation="portrait"
+            android:theme="@style/Theme.Transparent"
+            ></activity>
+
     </application>
 
 </manifest>
