--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -8,7 +8,7 @@
         android:label="@string/app_name"
         android:theme="@style/AppTheme" >
         <activity
-            android:name=".ui.TaskListActivity"
+            android:name=".ui.screens.TaskListActivity"
             android:screenOrientation="portrait"
             android:label="@string/app_name" >
             <intent-filter>
@@ -18,7 +18,7 @@
             </intent-filter>
         </activity>
 
-        <activity android:name=".ui.AddTaskActivity"
+        <activity android:name=".ui.screens.AddTaskActivity"
             android:screenOrientation="portrait"
             android:theme="@style/Theme.Transparent"
             ></activity>
